SERVER-58442 Clear _startAfterInvalidate when the resume token is observed in DSCSCheckInvalidate